# rusty

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package-lock.json  package.json  versioning.rs
.github/workflows/: rust.yml
daemon/: Cargo.toml  build.rs  grpc_client.js  package-lock.json  package.json
daemon/proto/: flaunch.proto
daemon/src/: main.rs
daemon/src/app_launcher/: osx_launcher.rs  win_launcher.rs
daemon/src/grpc/: mod.rs  script_engine_service.rs
daemon/src/system_tray/: mod.rs
docs/: ui_flow.iuml
flaunch/: Cargo.toml  build.rs  css.css  index.html  main.js  package-lock.json  package.json  preload.js
flaunch/incl/: flaunch_ui.hpp
flaunch/resources/: app.gresource  app.gresource.xml
flaunch/src/: application.rs  application_controllers.rs  filewatcher.rs  main.rs  main_window.rs  ui.rs  watch_pool.rs
flaunch/src/app_launcher/: mod.rs  osx_launcher.rs  win_launcher.rs
flaunch/src/controllers/: application_controller.rs  mainview_controller.rs  mod.rs  script_engine_controller.rs
flaunch/src/system_tray/: mod.rs
flaunch/src/system_tray/osx/: mod.rs  rustnsobject.rs
flaunch/src/system_tray/win/: mod.rs
flaunch/src/ui/: app_models.rs  main_window.rs  mod.rs
flaunch_cli/: Cargo.toml  build.rs
flaunch_cli/src/: app_meta.rs  main.rs
flaunch_core/: Cargo.toml  build.rs  versioning.rs
flaunch_core/src/: app_meta.rs  file_watcher.rs  lib.rs  logging.rs  settings.rs
flaunch_core/src/script_engine/: alias_interpreter.rs  interpreter.rs  mod.rs  py_annotation.py  py_interpreter.rs
flaunch_ui/: CMakelists.txt  Cargo.toml  build.rs
flaunch_ui/incl/: flaunch_ui.h  flaunch_ui.hpp  image_loader.hpp  logging.hpp
flaunch_ui/src/: flaunch_ui.cpp  image_loader.cpp  lib.rs
flaunch_ui/src/system_tray/: mod.rs
flaunch_ui/src/system_tray/osx/: mod.rs  rustnsobject.rs
flaunch_ui/src/system_tray/win/: mod.rs
gtk_test/: Cargo.toml
gtk_test/src/: main.rs
hypter_cli/: Cargo.toml  build.rs  versioning.rs
hypter_cli/src/: app_meta.rs  main.rs
hypter_core/: Cargo.toml
hypter_core/src/: lib.rs  settings.rs
hypter_core/src/script_engine/: interpreter.rs  mod.rs  py_interpreter.rs
my-app/: gulpfile.js  main.js  package-lock.json  package.json
my-app/src/: app.js  index.html  renderer.js
nanogui_wrapper/: Cargo.toml  build.rs
nanogui_wrapper/nanocui/: CMakelists.txt
nanogui_wrapper/nanocui/incl/: nanocui.h
nanogui_wrapper/nanocui/src/: nanocui.cpp
nanogui_wrapper/src/: lib.rs
pocketrocket_napi/: Cargo.toml  package-lock.json  package.json
pocketrocket_napi/src/: lib.rs
src/: app_meta.rs  application_data.rs  filewatcher.rs  logging.rs  main.rs  settings.rs
src/script_engine/: interpreter.rs  mod.rs  pybinding.rs  python_loader.rs  script.rs  script_engine.rs  script_interfaces.rs
sven_utils/: Cargo.toml
sven_utils/src/: lib.rs
test_scripts/: py_scripts.py
