[package]
name = "rust_app"
version = "0.1.0"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
edition = "2018"

[dependencies]
log = "*"
app_dirs = { package = "app_dirs2", version = "*" }
pyo3 = "*"
json = "*"
notify = "*"
clap ="*"
slotmap="*"

[build-dependencies]
git = { package = "git2", version= "*"}
regex = "*"
chrono = "*"