[package]
name = "flaunch"
version = "0.1.0"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
edition = "2018"

[dependencies]
flaunch_core = { path = "../flaunch_core" }
futures= "*"
tokio = { version = "*", features = ["sync", "process"] }
tokio-stream= { version = "*", features = ["sync"] }
once_cell="*"

[dependencies.system_uri]
version = "*"
default-features = false

[target."cfg(windows)".dependencies]
#systray = "0.1.1"
systray = {git = "https://github.com/mrmekon/systray-rs.git"}

[dependencies.fruitbasket]
version = "0.9"
features = ["logging"]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.18"
objc-foundation = "0.1"
objc_id = "0.1"

[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2"
features = ["exception"]

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk3-rs.git"