[package]
name = "flaunch_core"
version = "0.1.0"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
edition = "2018"

[dependencies]
log = "*"
json = "*"
slotmap="*"
app_dirs = { package = "app_dirs2", version = "*" }

[build-dependencies]
git = { package = "git2", version= "*"}
regex = "*"
chrono = "*"

[dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize"]