[package]
name = "flaunch_ui"
version = "0.1.0"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
edition = "2018"

[build-dependencies]
cmake ="*"
bindgen = "*"
cc = "*"

[target."cfg(windows)".dependencies]
#systray = "0.1.1"
systray = {git = "https://github.com/mrmekon/systray-rs.git"}
#systray = {path = "deps/systray-rs", version="0.1.1-connectr"}

[dependencies.fruitbasket]
version = "0.9"
features = ["logging"]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.18"
objc-foundation = "0.1"
objc_id = "0.1"

[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2"
features = ["exception"]