[package]
name = "flaunch_ui"
version = "0.1.0"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
edition = "2018"

[dependencies]
flaunch_core = { path = "../flaunch_core" }
sven_utils = { path = "../sven_utils" }
crossbeam= "*"
lazy_static="*"

[build-dependencies]
cmake ="*"
cc = "*"
cbindgen="*"
bindgen = "*"